<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161621">

    <TextView
        android:id="@+id/team2"
        android:layout_width="31dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="618dp"
        android:gravity="top"
        android:text="@string/team2"
        android:textAppearance="@style/team1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/team_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="640dp"
        android:background="@drawable/team_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <View
        android:id="@+id/team_logo3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="207dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="640dp"
        android:background="@drawable/team_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team"
        android:layout_width="31dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="618dp"
        android:gravity="top"
        android:text="@string/team"
        android:textAppearance="@style/team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hoje_21_00"
        android:layout_width="62dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="584dp"
        android:gravity="top"
        android:text="@string/dia"
        android:textAppearance="@style/dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="13dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="174dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="652dp"
        android:gravity="top"
        android:text="@string/vs"
        android:textAppearance="@style/vs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="226dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="48.49dp"
        android:layout_height="48.49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="234dp"
        android:background="@drawable/rectangle_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/nome_jogado"
        android:layout_width="90dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="263dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="234dp"
        android:gravity="top"
        android:text="@string/nome_jogado"
        android:textAppearance="@style/nome_jogado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="77dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="263dp"
        android:layout_marginEnd="20dp"
        android:gravity="top"
        android:text="@string/nickname"
        android:textAppearance="@style/nickname"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_4" />

    <TextView
        android:id="@+id/title"
        android:layout_width="118dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="724dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="3sp"
        android:text="@string/title"
        android:textAppearance="@style/title"
        android:translationY="-1.45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nickname3"
        android:layout_width="77dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="263dp"
        android:layout_marginEnd="20dp"
        android:gravity="top"
        android:text="@string/nickname"
        android:textAppearance="@style/nickname"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="48.49dp"
        android:layout_height="48.49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="259dp"
        android:background="@drawable/rectangle_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nome_jogado3"
        android:layout_width="90dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="263dp"
        android:layout_marginEnd="6dp"
        android:gravity="top"
        android:text="@string/nome_jogado"
        android:textAppearance="@style/nome_jogado"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_6"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>



