<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_card_"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:clickable="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="24dp"
    android:layout_marginTop="23dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="24dp"
    android:background="@drawable/cardd">


    <TextView
        android:id="@+id/time2"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="7dp"
        android:gravity="top"
        android:text="@string/team"
        android:textAppearance="@style/team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/team_logo2"
        app:layout_constraintTop_toBottomOf="@+id/team_logo2" />

    <ImageView
        android:id="@+id/team_logo2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="43.5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="72.5dp"
        android:src="@drawable/team_logo1"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/team_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="43.5dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="72.5dp"
        android:src="@drawable/team_logo1"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="66dp"
        android:layout_height="54dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="9dp"
        android:gravity="top"
        android:text="@string/team"
        android:textAppearance="@style/team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@+id/team_logo"
        app:layout_constraintTop_toBottomOf="@+id/team_logo" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="13dp"
        android:layout_height="14dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="77.5dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="84.5dp"
        android:gravity="top"
        android:text="@string/vs"
        android:textAppearance="@style/vs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/league_logo"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fuzelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/league_seri"
        android:layout_width="137dp"
        android:layout_height="9dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="11dp"
        android:gravity="top"
        android:text="@string/league_seri"
        android:textAppearance="@style/league_seri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/league_logo"
        app:layout_constraintTop_toBottomOf="@+id/line_1" />


    <TextView
        android:id="@+id/seg_16_00"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="254dp"
        android:layout_marginBottom="151dp"
        android:background="@drawable/match_time"
        android:gravity="center"
        android:text="@string/seg_16_00"
        android:textAppearance="@style/seg_16_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>













<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".MainActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="108dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="#272639"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <ImageView
        android:id="@+id/img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center|fill_horizontal"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fuzelogo" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center|end"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/fuzelogo" />


    <TextView
        android:id="@+id/team"
        android:layout_width="69dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14.5dp"
        android:layout_marginTop="70dp"
        android:gravity="top"
        android:text="@string/team"
        android:textAppearance="@style/team" />





    <TextView
        android:id="@+id/time1"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="83.5dp"
        android:layout_marginRight="197.5dp"
        android:layout_marginTop="113.5dp"
        android:layout_marginBottom="50.5dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:textStyle="bold" />


</androidx.cardview.widget.CardView>

</RelativeLayout>
-->